[gd_scene load_steps=8 format=3 uid="uid://cyr1may0ath5u"]

[ext_resource type="Script" path="res://LocalUserInterface.gd" id="1_0ujce"]
[ext_resource type="Texture2D" uid="uid://byyyuh104x4sm" path="res://menus/github.jpg" id="1_ftdv0"]
[ext_resource type="Script" path="res://Settings.gd" id="3_e6mjc"]
[ext_resource type="Script" path="res://Networking.gd" id="4_8wmih"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ooelr"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_5bmbi"]
sky_material = SubResource("ProceduralSkyMaterial_ooelr")

[sub_resource type="Environment" id="Environment_yrbh5"]
background_mode = 2
sky = SubResource("Sky_5bmbi")
tonemap_mode = 2
glow_enabled = true

[node name="Game" type="Node"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_yrbh5")

[node name="World" type="Node3D" parent="."]

[node name="Map" type="Node3D" parent="World"]

[node name="LocalUserInterface" type="CanvasLayer" parent="."]
script = ExtResource("1_0ujce")

[node name="Titel" type="Label" parent="LocalUserInterface"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -564.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Project Zero"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenu" type="Control" parent="LocalUserInterface"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 475)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -237.5
offset_right = 150.0
offset_bottom = 237.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MainPanel" type="PanelContainer" parent="LocalUserInterface/MainMenu"]
custom_minimum_size = Vector2(300, 475)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="LocalUserInterface/MainMenu/MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="LocalUserInterface/MainMenu/MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="LocalUserInterface/MainMenu/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="LocalUserInterface/MainMenu/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host a game!"

[node name="JoinButton" type="Button" parent="LocalUserInterface/MainMenu/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join a game!"

[node name="SettingsButton" type="Button" parent="LocalUserInterface/MainMenu/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ExitButton" type="Button" parent="LocalUserInterface/MainMenu/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="LinkDescription" type="Label" parent="LocalUserInterface/MainMenu/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Check out the GitHub page!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LinkButton" type="LinkButton" parent="LocalUserInterface/MainMenu/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
underline = 2
uri = "https://github.com/atomazu/Project-Zero"

[node name="LinkTexture" type="TextureRect" parent="LocalUserInterface/MainMenu/MainPanel/MarginContainer/VBoxContainer/LinkButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture = ExtResource("1_ftdv0")
expand_mode = 1
stretch_mode = 6

[node name="HostingInterface" type="Control" parent="LocalUserInterface"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(500, 300)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="PanelContainer" parent="LocalUserInterface/HostingInterface"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="LocalUserInterface/HostingInterface/MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="LocalUserInterface/HostingInterface/MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Titel" type="Label" parent="LocalUserInterface/HostingInterface/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Hosting Interface"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CustomIp" type="LineEdit" parent="LocalUserInterface/HostingInterface/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "custom ip (not needed)"

[node name="CustomPort" type="LineEdit" parent="LocalUserInterface/HostingInterface/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "custom port (not needed)"

[node name="HBoxContainer" type="HBoxContainer" parent="LocalUserInterface/HostingInterface/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PortForwardingToggle" type="CheckButton" parent="LocalUserInterface/HostingInterface/MainPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Use Port-Forwarding"
alignment = 2

[node name="UPnPToggle" type="CheckButton" parent="LocalUserInterface/HostingInterface/MainPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Use UPnP"
alignment = 2

[node name="TutorialButton" type="Button" parent="LocalUserInterface/HostingInterface/MainPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "How to host"

[node name="HostButton" type="Button" parent="LocalUserInterface/HostingInterface/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="CancelButton" type="Button" parent="LocalUserInterface/HostingInterface/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="Hint" type="Label" parent="LocalUserInterface/HostingInterface/MainPanel"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 0.164706)
theme_override_font_sizes/font_size = 10
text = "It may lag for a short moment when creating a server."
horizontal_alignment = 1
vertical_alignment = 1

[node name="JoiningInterface" type="Control" parent="LocalUserInterface"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(500, 300)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="PanelContainer" parent="LocalUserInterface/JoiningInterface"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="LocalUserInterface/JoiningInterface/MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="LocalUserInterface/JoiningInterface/MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Titel" type="Label" parent="LocalUserInterface/JoiningInterface/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Joining Interface"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CustomIp" type="LineEdit" parent="LocalUserInterface/JoiningInterface/MainPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "host ip4 (needed)"

[node name="CustomPort" type="LineEdit" parent="LocalUserInterface/JoiningInterface/MainPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "username (not needed)"

[node name="HBoxContainer" type="HBoxContainer" parent="LocalUserInterface/JoiningInterface/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PortForwardingToggle" type="CheckButton" parent="LocalUserInterface/JoiningInterface/MainPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Uses Port-Forwarding"
alignment = 2

[node name="UPnPToggle" type="CheckButton" parent="LocalUserInterface/JoiningInterface/MainPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Uses UPnP"
alignment = 2

[node name="TutorialButton" type="Button" parent="LocalUserInterface/JoiningInterface/MainPanel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "How to join"

[node name="JoinButton" type="Button" parent="LocalUserInterface/JoiningInterface/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="CancelButton" type="Button" parent="LocalUserInterface/JoiningInterface/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="Hint" type="Label" parent="LocalUserInterface/JoiningInterface/MainPanel"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 0.164706)
theme_override_font_sizes/font_size = 10
text = "If it laggs for a long time when joining, then it's probably faulty!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" type="Control" parent="LocalUserInterface"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(600, 400)
layout_mode = 3
anchor_left = 0.24
anchor_top = 0.191
anchor_right = 0.76
anchor_bottom = 0.809
offset_left = -0.480011
offset_top = 0.231987
offset_right = 0.479919
offset_bottom = -0.231995
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_e6mjc")

[node name="MainPanel" type="PanelContainer" parent="LocalUserInterface/Settings"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="LocalUserInterface/Settings/MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="LocalUserInterface/Settings/MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Titel" type="Label" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsGrid" type="GridContainer" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 3

[node name="WindowMode" type="VBoxContainer" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid"]
layout_mode = 2

[node name="Header" type="Label" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid/WindowMode"]
layout_mode = 2
text = "Window Mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FullScreenButton" type="Button" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid/WindowMode"]
layout_mode = 2
text = "Go Full Screen"

[node name="WindowedButton" type="Button" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid/WindowMode"]
layout_mode = 2
text = "Go Windowed"

[node name="Hint" type="Label" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid/WindowMode"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 0.164706)
theme_override_font_sizes/font_size = 10
text = "Full Screen for best latency!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="_Keybindings" type="VBoxContainer" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid"]
layout_mode = 2

[node name="Header" type="Label" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid/_Keybindings"]
layout_mode = 2
text = "Keybindings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton" type="MenuButton" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid/_Keybindings"]
layout_mode = 2
text = "Change Action"
flat = false
item_count = 1
popup/item_0/text = "Shoot"
popup/item_0/id = 0

[node name="Label" type="Label" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid/_Keybindings"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Selected Action: None"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid/_Keybindings"]
layout_mode = 2
placeholder_text = "KEY HERE"
alignment = 1

[node name="FullScreenButton" type="Button" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid/_Keybindings"]
layout_mode = 2
text = "Save"

[node name="Hint" type="Label" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid/_Keybindings"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 0.164706)
theme_override_font_sizes/font_size = 10
text = "Go crazy with it!
(Not implemented yet.)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="_Graphics" type="VBoxContainer" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid"]
layout_mode = 2

[node name="Header" type="Label" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid/_Graphics"]
layout_mode = 2
text = "Graphics"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckButton" type="CheckButton" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid/_Graphics"]
layout_mode = 2
text = "Ambient
Occlusion"

[node name="CheckButton2" type="CheckButton" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid/_Graphics"]
layout_mode = 2
text = "Anti Aliasing"

[node name="HBoxContainer" type="HBoxContainer" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid/_Graphics"]
layout_mode = 2

[node name="Label" type="Label" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid/_Graphics/HBoxContainer"]
layout_mode = 2
text = "Resolution:"

[node name="OptionButton" type="OptionButton" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid/_Graphics/HBoxContainer"]
layout_mode = 2
alignment = 1
item_count = 1
selected = 0
popup/item_0/text = "Native"
popup/item_0/id = 0

[node name="Hint" type="Label" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid/_Graphics"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 0.164706)
theme_override_font_sizes/font_size = 10
text = "Destroy your Computer!
(Not implemented yet.)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsControls" type="HBoxContainer" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="CancelButton" type="Button" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="ApplyButton" type="Button" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Apply"

[node name="ResetButton" type="Button" parent="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset"

[node name="Networking" type="Node" parent="."]
script = ExtResource("4_8wmih")

[connection signal="pressed" from="LocalUserInterface/MainMenu/MainPanel/MarginContainer/VBoxContainer/HostButton" to="LocalUserInterface" method="_on_switch_menu" binds= ["%MainMenu", "%HostingInterface"]]
[connection signal="pressed" from="LocalUserInterface/MainMenu/MainPanel/MarginContainer/VBoxContainer/JoinButton" to="LocalUserInterface" method="_on_switch_menu" binds= ["%MainMenu", "%JoiningInterface"]]
[connection signal="pressed" from="LocalUserInterface/MainMenu/MainPanel/MarginContainer/VBoxContainer/SettingsButton" to="LocalUserInterface" method="_on_switch_menu" binds= ["%MainMenu", "%Settings"]]
[connection signal="pressed" from="LocalUserInterface/MainMenu/MainPanel/MarginContainer/VBoxContainer/ExitButton" to="Networking" method="_on_exit_button_pressed"]
[connection signal="pressed" from="LocalUserInterface/HostingInterface/MainPanel/MarginContainer/VBoxContainer/HostButton" to="Networking" method="_on_host_button_pressed"]
[connection signal="pressed" from="LocalUserInterface/HostingInterface/MainPanel/MarginContainer/VBoxContainer/CancelButton" to="LocalUserInterface" method="_on_switch_menu" binds= ["%HostingInterface", "%MainMenu"]]
[connection signal="pressed" from="LocalUserInterface/JoiningInterface/MainPanel/MarginContainer/VBoxContainer/JoinButton" to="Networking" method="_on_join_button_pressed"]
[connection signal="pressed" from="LocalUserInterface/JoiningInterface/MainPanel/MarginContainer/VBoxContainer/CancelButton" to="LocalUserInterface" method="_on_switch_menu" binds= ["%JoiningInterface", "%MainMenu"]]
[connection signal="pressed" from="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid/WindowMode/FullScreenButton" to="LocalUserInterface/Settings" method="_on_full_screen_button_pressed"]
[connection signal="pressed" from="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsGrid/WindowMode/WindowedButton" to="LocalUserInterface/Settings" method="_on_windowed_button_pressed"]
[connection signal="pressed" from="LocalUserInterface/Settings/MainPanel/MarginContainer/VBoxContainer/SettingsControls/CancelButton" to="LocalUserInterface" method="_on_switch_menu" binds= ["%Settings", "%MainMenu"]]
